Setup basic server and client for transmitting object data to osci-render from blender

--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,12 @@
             <artifactId>aparapi</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
 
     </dependencies>
     <profiles>
