--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>sh.ball</groupId>
     <artifactId>osci-render</artifactId>
-    <version>1.27.2-SNAPSHOT</version>
+    <version>1.27.3</version>
 
     <name>osci-render</name>
 
