--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,9 +111,12 @@ jobs:
           node-version: 16
       - name: Convert wiki to PDF
         run: |
+          sudo apt update
+          sudo apt install xfonts-75dpi xfonts-base gvfs colord glew-utils libvisual-0.4-plugins gstreamer1.0-tools opus-tools qt5-image-formats-plugins qtwayland5 qt5-qmltooling-plugins librsvg2-bin lm-sensors
+          sudo apt install wget
           wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb
-          dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb
-          npm install -g github-wikito-converter
+          sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb
+          sudo npm install -g github-wikito-converter
           gwtc -v -f pdf .
       - name: Release
         uses: softprops/action-gh-release@v1
