--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,7 +127,7 @@ jobs:
           ls | grep -xv "User-Documentation.md" | parallel rm
           cd ..
           gwtc -v -f pdf -t "osci-render documentation" --logo-img "osci-render/osci.png" wiki
-          cd ../osci-render
+          cd osci-render
           version=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
           echo "VERSION=$version" >> $GITHUB_ENV
       - name: Release
