--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,7 +124,7 @@ jobs:
           sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb
           sudo npm install -g github-wikito-converter
           cd wiki
-          ls | grep -xv "User-Documentation.md" | parallel rm
+          ls | grep -xv "Home.md" | parallel rm
           cd ..
           gwtc -v -f pdf -t "osci-render documentation" --logo-img "osci-render/osci.png" wiki
           cd osci-render
