Build on push to master instead of release

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,7 @@ name: Build
 on:
   push:
     branches:
-      - release
-      - 3d-audio
+      - master
 jobs:
   build-linux:
     name: Build Linux
