--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - develop
   workflow_dispatch:
 jobs:
   build-linux:
@@ -50,6 +51,49 @@ jobs:
           source ./ci/test.sh
           source ./ci/build.sh
         shell: bash
+
+      - name: Setup temporary keychain and add application signing certificate
+        uses: apple-actions/import-codesign-certs@v1
+        with: 
+          p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_APPLICATION }}
+          p12-password: ${{ secrets.APPLE_CERTIFICATE_APPLICATION_PASSWORD }}
+
+      - name: Codesign AU plugin
+        working-directory: ${{ github.workspace }}/ci/bin
+        run: codesign -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.component --timestamp
+
+      - name: Codesign VST3 plugin
+        working-directory: ${{ github.workspace }}/ci/bin
+        run: codesign -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.vst3 --timestamp
+
+      - name: Codesign Standalone app
+        working-directory: ${{ github.workspace }}/ci/bin
+        run: codesign -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.app --timestamp
+
+      - name: Download Packages installer build tool
+        run: wget http://s.sudre.free.fr/Software/files/Packages.dmg
+
+      - name: Mount Packages image
+        run: hdiutil attach Packages.dmg
+
+      - name: Install Packages
+        run: sudo installer -pkg /Volumes/Packages\ 1.2.9/Install\ Packages.pkg -target /
+
+      - name: Build installer
+        run: packagesbuild --project "${{ github.workspace }}/packaging/osci-render.pkgproj"
+
+      - name: Setup temporary keychain and add installer signing certificate
+        uses: apple-actions/import-codesign-certs@v1
+        with: 
+          p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_INSTALLER }}
+          p12-password: ${{ secrets.APPLE_CERTIFICATE_INSTALLER_PASSWORD }}
+
+      - name: Sign installer
+        run: productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "${{ github.workspace }}/packaging/osci-render.pkg" "${{ github.workspace }}/bin/osci-render.pkg"
+    
+      - name: Notarize installer
+        run: npx notarize-cli --file "${{ github.workspace }}/packaging/osci-render-signed.pkg" --bundle-id com.osci-render.pkg --username ${{ secrets.APPLE_ID }} --password ${{ secrets.APPLE_NOTARIZATION_PW }}
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
