--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -83,10 +83,10 @@ jobs:
         run: packagesbuild --project "${{ github.workspace }}/packaging/osci-render.pkgproj"
 
       - name: Sign installer
-        run: productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "${{ github.workspace }}/packaging/osci-render.pkg" "${{ github.workspace }}/bin/osci-render.pkg"
+        run: productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "${{ github.workspace }}/packaging/build/osci-render.pkg" "${{ github.workspace }}/bin/osci-render.pkg"
     
       - name: Notarize installer
-        run: npx notarize-cli --file "${{ github.workspace }}/packaging/osci-render-signed.pkg" --bundle-id com.osci-render.pkg --username ${{ secrets.APPLE_ID }} --password ${{ secrets.APPLE_NOTARIZATION_PASSWORD }}
+        run: npx notarize-cli --file "${{ github.workspace }}/bin/osci-render.pkg" --bundle-id com.osci-render.pkg --username ${{ secrets.APPLE_ID }} --password ${{ secrets.APPLE_NOTARIZATION_PASSWORD }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
