--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -86,7 +86,7 @@ jobs:
         run: productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "${{ github.workspace }}/packaging/build/osci-render.pkg" "${{ github.workspace }}/bin/osci-render.pkg"
     
       - name: Notarize installer
-        run: npx notarize-cli --file "${{ github.workspace }}/bin/osci-render.pkg" --bundle-id com.osci-render.pkg --username ${{ secrets.APPLE_ID }} --password ${{ secrets.APPLE_NOTARIZATION_PASSWORD }}
+        run: xcrun altool --notarize-app -f "${{ github.workspace }}/bin/osci-render.pkg" --primary-bundle-id com.osci-render.pkg --username "${{ secrets.APPLE_ID }}" --password "${{ secrets.APPLE_NOTARIZATION_PASSWORD }}"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
