--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,15 +63,15 @@ jobs:
 
       - name: Codesign AU plugin
         working-directory: ${{ github.workspace }}/ci/bin
-        run: codesign -v --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.component --timestamp --deep --strict --options=runtime
+        run: codesign -vvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.component --timestamp --deep --strict --options=runtime
 
       - name: Codesign VST3 plugin
         working-directory: ${{ github.workspace }}/ci/bin
-        run: codesign -v --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.vst3 --timestamp --deep --strict --options=runtime
+        run: codesign -vvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.vst3 --timestamp --deep --strict --options=runtime
 
       - name: Codesign Standalone app
         working-directory: ${{ github.workspace }}/ci/bin
-        run: codesign -v --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.app --timestamp --deep --strict --options=runtime
+        run: codesign -vvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.app --timestamp --deep --strict --options=runtime
 
       - name: Download Packages installer build tool
         run: wget http://s.sudre.free.fr/files/Packages_1211_dev.dmg
