--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -75,20 +75,20 @@ jobs:
       - name: Codesign AU plugin
         working-directory: ${{ github.workspace }}/ci/bin
         run: |
-          codesign -vvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.component --timestamp --deep --strict --options=runtime
-          codesign -vvv --deep --strict osci-render.component
+          codesign -vvvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.component --timestamp --deep --strict --options=runtime
+          codesign -vvvv --deep --strict osci-render.component
 
       - name: Codesign VST3 plugin
         working-directory: ${{ github.workspace }}/ci/bin
         run: |
-          codesign -vvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.vst3 --timestamp --deep --strict --options=runtime
-          codesign -vvv --deep --strict osci-render.vst3
+          codesign -vvvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.vst3 --timestamp --deep --strict --options=runtime
+          codesign -vvvv --deep --strict osci-render.vst3
 
       - name: Codesign Standalone app
         working-directory: ${{ github.workspace }}/ci/bin
         run: |
-          codesign -vvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.app --timestamp --deep --strict --options=runtime
-          codesign -vvv --deep --strict osci-render.app
+          codesign -vvvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.app --timestamp --deep --strict --options=runtime
+          codesign -vvvv --deep --strict osci-render.app
 
       - name: Download Packages installer build tool
         run: wget http://s.sudre.free.fr/files/Packages_1211_dev.dmg
