--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,9 @@ jobs:
   build-linux:
     name: Build Linux
     runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        project: [osci-render, sosci]
     steps:
       - name: Fix up git URLs
         run: echo -e '[url "https://github.com/"]\n  insteadOf = "git@github.com:"' >> ~/.gitconfig
@@ -22,7 +25,7 @@ jobs:
           export OS="linux"
           source ./ci/setup-env.sh
           source ./ci/test.sh
-          source ./ci/build.sh
+          source ./ci/build.sh "${{ matrix.project }}"
         shell: bash
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
@@ -69,29 +72,8 @@ jobs:
           export OS="mac"
           source ./ci/setup-env.sh
           source ./ci/test.sh
-          source ./ci/build.sh
+          source ./ci/build.sh "${{ matrix.project }}"
         shell: bash
-
-      # - name: Codesign AU plugin
-      #   working-directory: ${{ github.workspace }}/ci/bin
-      #   run: |
-      #     codesign -vvvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.component --timestamp --deep --strict --options=runtime
-      #     codesign -vvvv --deep --strict osci-render.component
-      #     codesign -dv --verbose=4 osci-render.component
-
-      # - name: Codesign VST3 plugin
-      #   working-directory: ${{ github.workspace }}/ci/bin
-      #   run: |
-      #     codesign -vvvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.vst3 --timestamp --deep --strict --options=runtime
-      #     codesign -vvvv --deep --strict osci-render.vst3
-      #     codesign -dv --verbose=4 osci-render.vst3
-
-      # - name: Codesign Standalone app
-      #   working-directory: ${{ github.workspace }}/ci/bin
-      #   run: |
-      #     codesign -vvvv --force -s "${{ secrets.APPLE_DEVELOPER_ID_APPLICATION }}" osci-render.app --timestamp --deep --strict --options=runtime
-      #     codesign -vvvv --deep --strict osci-render.app
-      #     codesign -dv --verbose=4 osci-render.app
 
       - name: Download Packages installer build tool
         run: wget http://s.sudre.free.fr/files/Packages_1211_dev.dmg
@@ -103,29 +85,29 @@ jobs:
         run: sudo installer -pkg /Volumes/Packages\ 1.2.11/Install\ Packages.pkg -target /
 
       - name: Build installer
-        run: packagesbuild --project "${{ github.workspace }}/packaging/osci-render.pkgproj"
+        run: packagesbuild --project "${{ github.workspace }}/packaging/${{ matrix.project }}.pkgproj"
 
       - name: Sign installer
         run: |
-          productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "${{ github.workspace }}/packaging/build/osci-render.pkg" "${{ github.workspace }}/bin/osci-render.pkg"
-          pkgutil --check-signature "${{ github.workspace }}/bin/osci-render.pkg"
+          productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "${{ github.workspace }}/packaging/build/${{ matrix.project }}.pkg" "${{ github.workspace }}/bin/${{ matrix.project }}.pkg"
+          pkgutil --check-signature "${{ github.workspace }}/bin/${{ matrix.project }}.pkg"
     
       - name: Notarize installer
         uses: lando/notarize-action@v2
         with:
-          product-path: ${{ github.workspace }}/bin/osci-render.pkg
+          product-path: ${{ github.workspace }}/bin/${{ matrix.project }}.pkg
           appstore-connect-username: ${{ secrets.APPLE_ID }}
           appstore-connect-password: ${{ secrets.APPLE_NOTARIZATION_PASSWORD }}
           appstore-connect-team-id: ${{ secrets.APPLE_TEAM_ID }}
-          primary-bundle-id: com.osci-render.pkg
+          primary-bundle-id: com.${{ matrix.project }}.pkg
           tool: notarytool
           verbose: true
       
       - name: Staple installer
-        run: xcrun stapler staple "${{ github.workspace }}/bin/osci-render.pkg"
+        run: xcrun stapler staple "${{ github.workspace }}/bin/${{ matrix.project }}.pkg"
       
       - name: Check installer
-        run: spctl -a -vvv -t install "${{ github.workspace }}/bin/osci-render.pkg"
+        run: spctl -a -vvv -t install "${{ github.workspace }}/bin/${{ matrix.project }}.pkg"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
@@ -153,7 +135,7 @@ jobs:
           export OS="win"
           source ./ci/setup-env.sh
           source ./ci/test.sh
-          source ./ci/build.sh
+          source ./ci/build.sh "${{ matrix.project }}"
         shell: bash
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
