--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -107,13 +107,13 @@ jobs:
 
       - name: Sign installer
         run: |
-          productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "packaging/build/${{ matrix.project }}.pkg" "bin/${{ matrix.project }}.pkg"
-          pkgutil --check-signature "bin/${{ matrix.project }}.pkg"
+          productsign -s "${{ secrets.APPLE_DEVELOPER_ID_INSTALLER }}" "packaging/build/${{ matrix.project }}.pkg" "bin/${{ matrix.project }}-{{ matrix.version }}.pkg"
+          pkgutil --check-signature "bin/${{ matrix.project }}-{{ matrix.version }}.pkg"
     
       - name: Notarize installer
         uses: lando/notarize-action@v2
         with:
-          product-path: "bin/${{ matrix.project }}.pkg"
+          product-path: "bin/${{ matrix.project }}-{{ matrix.version }}.pkg"
           appstore-connect-username: ${{ secrets.APPLE_ID }}
           appstore-connect-password: ${{ secrets.APPLE_NOTARIZATION_PASSWORD }}
           appstore-connect-team-id: ${{ secrets.APPLE_TEAM_ID }}
@@ -122,10 +122,10 @@ jobs:
           verbose: true
       
       - name: Staple installer
-        run: xcrun stapler staple "bin/${{ matrix.project }}.pkg"
+        run: xcrun stapler staple "bin/${{ matrix.project }}-{{ matrix.version }}.pkg"
       
       - name: Check installer
-        run: spctl -a -vvv -t install "bin/${{ matrix.project }}.pkg"
+        run: spctl -a -vvv -t install "bin/${{ matrix.project }}-{{ matrix.version }}.pkg"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
@@ -175,7 +175,7 @@ jobs:
           path: "packaging/${{ matrix.project }}.iss"
       
       - name: Move installer to bin
-        run: mv "packaging/build/${{ matrix.project }}.exe" "bin/${{ matrix.project }}.exe"
+        run: mv "packaging/build/${{ matrix.project }}.exe" "bin/${{ matrix.project }}-{{ matrix.version }}.exe"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
